<resources>
    <string name="app_name">TurnOff App</string>
    <string name="app_caption" translatable="false">TurnOff App</string>
    <string name="hour_5">5 hours</string>
    <string name="hour_3">3 hours</string>
    <string name="hour_2">2 hour</string>
    <string name="hour_1">1 hour</string>
    <string name="minutes_45">45 minutes</string>
    <string name="minutes_30">30 minutes</string>
    <string name="minutes_20">20 minutes</string>
    <string name="minutes_10">10 minutes</string>
    <string name="countDown">Left before the shutdown</string>
    <string name="suffix_str">minutes.</string>
    <string name="clock_start">Start the clock</string>
    <string name="clock_stop">Stop the clock</string>
    <string name="timer_switch">Timer switch</string>
    <string name="title_activity_test">Leanback test</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>