<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_caption"
        android:textAlignment="center"
        android:textColor="#900"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="TextSizeCheck" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/hour_5"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionTextView" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/hour_3"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton1"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        app:layout_constraintStart_toEndOf="@+id/radioButton1"
        app:layout_constraintTop_toTopOf="@+id/radioButton1"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/hour_2"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioButton4"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        app:layout_constraintTop_toTopOf="@+id/radioButton2"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:buttonTint="#008577"
        android:checked="true"
        android:onClick="onClickRB"
        android:text="@string/hour_1"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toEndOf="@+id/radioButton3"
        app:layout_constraintTop_toTopOf="@+id/radioButton3"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/minutes_45"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/radioButton1"
        app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/minutes_30"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton5"
        app:layout_constraintStart_toStartOf="@+id/radioButton2"
        app:layout_constraintTop_toTopOf="@+id/radioButton5"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/minutes_20"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton6"
        app:layout_constraintStart_toStartOf="@+id/radioButton3"
        app:layout_constraintTop_toTopOf="@+id/radioButton6"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:buttonTint="#008577"
        android:checked="false"
        android:onClick="onClickRB"
        android:text="@string/minutes_10"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton7"
        app:layout_constraintStart_toStartOf="@+id/radioButton4"
        app:layout_constraintTop_toTopOf="@+id/radioButton7"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="radioButton1,radioButton2,radioButton3,radioButton4,radioButton5,radioButton6,radioButton7,radioButton8" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countDownTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countDown"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minutesRestTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="888"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/suffixTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suffix_str"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <Switch
        android:id="@+id/timerSwitch"
        android:layout_width="269dp"
        android:layout_height="36dp"
        android:buttonTint="#FFB4A8"
        android:text="@string/clock_start"
        android:textColor="#fff"
        android:textOff="@string/clock_stop"
        android:textOn="@string/clock_start"
        android:textSize="24sp"
        android:textStyle="bold"
        android:thumbTint="#008577"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842"
        tools:checked="false" />

</androidx.constraintlayout.widget.ConstraintLayout>